// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatInput expand to full-screen editor matches the composer snapshot in both layouts: compact (stacked=false) 1`] = `
<View
  className="px-4 pt-2"
  style={
    {
      "paddingBottom": 16,
    }
  }
>
  <View
    testID="attachment-preview"
  />
  <View
    testID="command-palette"
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1a1a1a",
          "borderColor": "#333",
          "borderRadius": 9999,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 44,
          "paddingLeft": 6,
          "paddingRight": 6,
          "paddingVertical": 4,
        }
      }
    >
      <View
        accessibilityHint="Opens attachment, mode, and feature options"
        accessibilityLabel="Add to chat"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 9999,
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
      >
        <View
          color="#888"
          size={20}
          testID="icon-Plus"
        />
      </View>
      <TextInput
        accessibilityHint="Type your message to the AI assistant"
        accessibilityLabel="Message input"
        accessible={true}
        blurOnSubmit={false}
        multiline={true}
        numberOfLines={6}
        onChangeText={[Function]}
        onContentSizeChange={[Function]}
        placeholder="What's on your mind?"
        placeholderTextColor="#888"
        returnKeyType="default"
        selectionColor="#14b8a6"
        style={
          {
            "color": "#fff",
            "display": "flex",
            "flex": 1,
            "fontSize": 15,
            "maxHeight": 160,
            "minHeight": 24,
            "paddingVertical": 0,
          }
        }
        testID="chat.composer.input"
        value=""
      />
      <View
        style={
          {
            "display": "flex",
          }
        }
        testID="chat.composer.mic"
      >
        <View
          accessibilityLabel="Voice input"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="voice-input-button"
        >
          <Text>
            Mic
          </Text>
        </View>
      </View>
    </View>
    <View
      testID="chat.composer.send"
    >
      <View
        accessibilityHint="Opens hands-free voice conversation"
        accessibilityLabel="Start voice mode"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={6}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 9999,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <View
          color="#1a1a1a"
          size={18}
          testID="icon-AudioLines"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ChatInput expand to full-screen editor matches the composer snapshot in both layouts: stacked (stacked=true) 1`] = `
<View
  className="px-4 pt-2"
  style={
    {
      "paddingBottom": 16,
    }
  }
>
  <View
    testID="attachment-preview"
  />
  <View
    testID="command-palette"
  />
  <View
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "stretch",
          "backgroundColor": "#1a1a1a",
          "borderColor": "#333",
          "borderRadius": 24,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "minHeight": 44,
          "paddingLeft": 16,
          "paddingRight": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessibilityHint="Opens the message in a full-screen editor"
        accessibilityLabel="Expand message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderRadius": 9999,
            "height": 28,
            "justifyContent": "center",
            "position": "absolute",
            "right": 6,
            "top": 6,
            "width": 28,
          }
        }
        testID="chat.composer.expand"
      >
        <View
          color="#888"
          size={16}
          testID="icon-Maximize2"
        />
      </View>
      <TextInput
        accessibilityHint="Type your message to the AI assistant"
        accessibilityLabel="Message input"
        accessible={true}
        blurOnSubmit={false}
        multiline={true}
        numberOfLines={6}
        onChangeText={[Function]}
        onContentSizeChange={[Function]}
        placeholder="What's on your mind?"
        placeholderTextColor="#888"
        returnKeyType="default"
        selectionColor="#14b8a6"
        style={
          {
            "alignSelf": "stretch",
            "color": "#fff",
            "display": "flex",
            "fontSize": 15,
            "maxHeight": 160,
            "minHeight": 24,
            "paddingRight": 28,
            "paddingVertical": 0,
          }
        }
        testID="chat.composer.input"
        value="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
      />
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 8,
            "marginLeft": -6,
            "marginTop": 8,
          }
        }
        testID="chat.composer.mic"
      >
        <View
          accessibilityHint="Opens attachment, mode, and feature options"
          accessibilityLabel="Add to chat"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={6}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#242424",
              "borderRadius": 9999,
              "height": 34,
              "justifyContent": "center",
              "width": 34,
            }
          }
        >
          <View
            color="#888"
            size={18}
            testID="icon-Plus"
          />
        </View>
        <View
          accessibilityHint="Opens the model picker"
          accessibilityLabel="Model: Claude Sonnet 5, reasoning effort Medium"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={8}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 9999,
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 5,
              "minHeight": 30,
              "paddingHorizontal": 6,
            }
          }
          testID="chat.composer.model"
        >
          <Text
            className="text-sm text-white "
            numberOfLines={1}
            style={
              {
                "color": "#bbb",
                "flexShrink": 1,
                "fontSize": 13,
                "fontWeight": "500",
                "includeFontPadding": false,
                "lineHeight": 16,
              }
            }
          >
            Claude Sonnet 5
          </Text>
          <Text
            className="text-sm text-white "
            numberOfLines={1}
            style={
              {
                "color": "#888",
                "fontSize": 13,
                "includeFontPadding": false,
                "lineHeight": 16,
              }
            }
          >
            Medium
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        />
        <View
          accessibilityLabel="Voice input"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="voice-input-button"
        >
          <Text>
            Mic
          </Text>
        </View>
      </View>
    </View>
    <View
      testID="chat.composer.send"
    >
      <View
        accessibilityLabel="Send message"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="send-button"
      >
        <Text>
          Send
        </Text>
      </View>
    </View>
  </View>
</View>
`;
